feat: Add first version of header - add fonts,logo,etc.

--- a/src/app/core/layout/header/header.component.html
+++ b/src/app/core/layout/header/header.component.html
@@ -1,1 +1,6 @@
-<p>header works!</p>
+<app-logo></app-logo>
+<div class="container-logo d-flex p-3">
+  <img src="src/assets/img/webealo.svg" alt="banner-webealo" />
+  <h1>Aún sin web? Webealo</h1>
+  <p>Haz que te encuentren, haz que te elijan</p>
+</div>
