--- a/src/app/shared/ui/logo/logo.component.html
+++ b/src/app/shared/ui/logo/logo.component.html
@@ -1,1 +1,4 @@
-<p>logo works!</p>
+<div class="logo ps-3 d-flex">
+    <img src="assets/img/logo-webealo.svg" class="img-fluid w-25" alt="logo-webealo">
+    <p class="title fw-semibold ps-1">WEBEALO</p>
+</div>
