--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,9 +1,2 @@
-<div class="d-flex justify-content-between align-items-center">
-  <div class="container col-3">
-    ¡Sección 1!
-  </div>
-  <div class="container col-3">
-    ¡Sección 2!
-  </div>
+<app-header></app-header>
 
-</div>
