styles: fix margins of the cards  elements

--- a/src/app/shared/ui/card/card.component.html
+++ b/src/app/shared/ui/card/card.component.html
@@ -1,12 +1,12 @@
 <div class="card">
     <div class="d-flex justify-content-around align-items-center">
-        <div class="md-col-6">
+        <div class="col-6">
             <app-title-card [title]="title" [subtitle]="subtitle"></app-title-card>
         </div>
         <div class="col-3">
-            <p class="price">{{ price }}€</p>
+            <p class="price mb-0">{{ price }}€</p>
         </div>
-        <div class="col-2">
+        <div class="col-3">
             <span><input type="checkbox"> Agregar</span>
         </div>
     </div>
