--- a/src/app/shared/ui/card/card.component.scss
+++ b/src/app/shared/ui/card/card.component.scss
@@ -1,7 +1,10 @@
 .price {
-    font-weight: 700;
+    font-weight: 600;
 }
 
 .card {
     margin-bottom: 1rem;
+    //border-color: #374c96;
+    border:none;
+    box-shadow: 1px 2px 1px 1px gray;
 }
