--- a/src/app/shared/ui/title-card/title-card.component.html
+++ b/src/app/shared/ui/title-card/title-card.component.html
@@ -1,4 +1,4 @@
 <div class="container">
-    <h3>{{ title }}</h3>
-    <p>{{ subtitle }}</p>
+    <h3 class="m-1">{{ title }}</h3>
+    <p class="m-1">{{ subtitle }}</p>
 </div>
