--- a/src/app/shared/ui/card/card.component.scss
+++ b/src/app/shared/ui/card/card.component.scss
@@ -3,8 +3,21 @@
 }
 
 .card {
-    margin-bottom: 1rem;
-    //border-color: #374c96;
+    padding: 10px;
+    border-color: #374c96;
     border:none;
-    box-shadow: 1px 2px 1px 1px gray;
+    box-shadow: 1px 1px 1px 1px #374c96;
+    width: 70%;
+    margin: auto;
+    margin-bottom: 1rem;
+    p {
+        margin-bottom: 0px;
+    }
+}
+
+
+@media (max-width: 768px) {
+    .card {
+        width: 100%;
+    }
 }
