wip: adding the final price according to the selection

--- a/src/app/features/main-form/main-form.component.html
+++ b/src/app/features/main-form/main-form.component.html
@@ -4,5 +4,6 @@
     [title]="card.title" 
     [subtitle]="card.subtitle" 
     [price]="card.price">
+    <input type="checkbox" [checked]="card.selected" (change)="selection(card.title)">
     </app-card>
 </div>
