feat: add the total budget in the form

--- a/src/app/features/main-form/main-form.component.scss
+++ b/src/app/features/main-form/main-form.component.scss
@@ -2,9 +2,17 @@
     margin: 3rem;
 }
 
+p {
+    width: 85%;
+}
 
 @media (max-width: 768px) {
     .form {
         margin: 1.5rem;
     }
+
+    p {
+        width: 100%;
+    }
 }
+
