--- a/src/app/features/main-form/main-form.component.html
+++ b/src/app/features/main-form/main-form.component.html
@@ -6,4 +6,8 @@
     [price]="card.price">
     <input type="checkbox" [checked]="card.selected" (change)="selection(card.title)">
     </app-card>
+    <div>
+        <p class="d-flex justify-content-end fs-5">Total presupuestado: <b class="ps-5">{{ totalSelected() }}€</b></p>
+    </div>
+
 </div>
