--- a/src/app/features/main-form/main-form.component.html
+++ b/src/app/features/main-form/main-form.component.html
@@ -3,8 +3,9 @@
     *ngFor="let card of cards()" 
     [title]="card.title" 
     [subtitle]="card.subtitle" 
-    [price]="card.price">
-    <input type="checkbox" [checked]="card.selected" (change)="selection(card.title)">
+    [price]="card.price"
+    [selected]="card.selected"
+    (selectedChange)="selection($event)">
     </app-card>
     <div>
         <p class="d-flex justify-content-end fs-5">Total presupuestado: <b class="ps-5">{{ totalSelected() }}€</b></p>
