wip: adding the buttons in the panel

--- a/src/app/shared/ui/panel/panel.component.html
+++ b/src/app/shared/ui/panel/panel.component.html
@@ -1,4 +1,5 @@
 <div class="container">
     <div><label>Número de páginas</label></div>
-    <div><button>-</button><input type="number"><button>+</button></div>
+    <div><app-button [textButton]="'-'"></app-button><input type="number"><app-button [textButton]="'+'"></app-button>
+    </div>
 </div>
