feat: add panel with pages and lenguages

--- a/src/app/features/main-form/main-form.component.html
+++ b/src/app/features/main-form/main-form.component.html
@@ -5,9 +5,10 @@
     [subtitle]="card.subtitle" 
     [price]="card.price"
     [selected]="card.selected"
-    (selectedChange)="selection($event)">
+    (selectedChange)="selection($event)" 
+    (extraTotalPrice)="onFinalPrice($event)">
     </app-card>
     <div>
-        <p class="d-flex justify-content-end fs-5">Total presupuestado: <b class="ps-5">{{ totalSelected() }}€</b></p>
+        <p class="d-flex justify-content-end fs-5">Total presupuestado: <b class="ps-5">{{ totalSelected() + finalExtraPrice() }}€</b></p>
     </div>
 </div>
