--- a/src/app/shared/ui/panel/panel.component.html
+++ b/src/app/shared/ui/panel/panel.component.html
@@ -1,5 +1,5 @@
-<div class="container d-flex justify-content-end">
+<div class="container mt-2 d-flex justify-content-end">
     <div><label>{{ textPanel }}</label></div>
-    <div class="d-flex"><app-button [textButton]="'-'"></app-button><input type="number"><app-button [textButton]="'+'"></app-button>
+    <div class="d-flex"><app-button [textButton]="'-'" (click)="decrease()"></app-button><span><div class="text-center">{{ numberPanel }}</div></span><app-button [textButton]="'+'" (click)="increase()"></app-button>
     </div>
 </div>
