style: add styles in the modal

--- a/src/app/shared/ui/panel/panel.component.html
+++ b/src/app/shared/ui/panel/panel.component.html
@@ -14,6 +14,6 @@
     <div class="modal-body">
         <p class="d-flex justify-content-center p-3">Esto representa el {{ textPanel.toLowerCase() }} que se incluirán en el proyecto. Cada elemento adicional
             sumará 30 €.</p>
-        <button type="button" class="btn modal-button m-3" data-bs-dismiss="modal" (click)="closeInfo()">Cerrar</button>
+        <button type="button" class="btn btn-primary modal-button m-3" data-bs-dismiss="modal" (click)="closeInfo()">Cerrar</button>
     </div>
 </div>
