--- a/src/app/features/client-form/client-form.component.html
+++ b/src/app/features/client-form/client-form.component.html
@@ -1,1 +1,31 @@
-<p>client-form works!</p>
+<h3>Datos del cliente</h3>
+
+<div class="form-group mb-2">
+  <label>Nombre</label>
+  <input
+    type="text"
+    class="form-control"
+    [value]="name()"
+    (input)="updateSignal(name, $event)"
+  />
+</div>
+
+<div class="form-group mb-2">
+  <label>Teléfono</label>
+  <input
+    type="tel"
+    class="form-control"
+    [value]="phone()"
+    (input)="updateSignal(phone, $event)"
+  />
+</div>
+
+<div class="form-group mb-2">
+  <label>Email</label>
+  <input
+    type="email"
+    class="form-control"
+    [value]="email()"
+    (input)="updateSignal(email, $event)"
+  />
+</div>
