--- a/src/app/features/main-form/main-form.component.html
+++ b/src/app/features/main-form/main-form.component.html
@@ -16,30 +16,18 @@
     </p>
   </div>
   <!-- Formulario que aparece solo si hay algo seleccionado -->
-  <div *ngIf="showClientForm()">
-    <h3>Datos del cliente</h3>
-    <div class="form-group mb-2">
-      <label>Nombre</label>
-      <input type="text" (input)="updateSignalFromInput(clientName, $event)" />
-    </div>
+  <app-client-form
+    [name]="clientName"
+    [phone]="clientPhone"
+    [email]="clientEmail"
+  ></app-client-form>
 
-    <div class="form-group mb-2">
-      <label>Teléfono</label>
-      <input type="tel" (input)="updateSignalFromInput(clientPhone, $event)" />
-    </div>
-
-    <div class="form-group mb-2">
-      <label>Email</label>
-      <input type="email" (input)="updateSignalFromInput(clientEmail, $event)" />
-    </div>
-
-    <div class="d-flex justify-content-between align-items-center mt-3">
-      <p>
-        <strong>Total: {{ finalTotal() }} €</strong>
-      </p>
-      <button class="btn btn-primary" (click)="saveBudget()">
-        Guardar presupuesto
-      </button>
-    </div>
+  <div class="d-flex justify-content-between align-items-center mt-3">
+    <p>
+      <strong>Total: {{ finalTotal() }} €</strong>
+    </p>
+    <button class="btn btn-primary" (click)="saveBudget()">
+      Guardar presupuesto
+    </button>
   </div>
 </div>
