--- a/src/app/features/budgets-list/budgets-list.component.html
+++ b/src/app/features/budgets-list/budgets-list.component.html
@@ -1,12 +1,16 @@
-<h3>Presupuestos guardados</h3>
-<ul *ngIf="budgets().length; else empty">
-  <li *ngFor="let b of budgets()">
-    <strong>{{ b.clientName }}</strong> ({{ b.email }}) - {{ b.total }} €
-    <br />
-    Servicios: {{ b.services.join(", ") }}
-  </li>
-</ul>
-<ng-template #empty>
-  <p>No hay presupuestos todavía.</p>
-</ng-template>
+<div class="card">
+  <h3>Presupuestos en cursos</h3>
+  <ul class="p-0" *ngIf="budgets().length; else empty"> 
+    <li *ngFor="let b of budgets()">
+      <div class="sub-card">
+        <strong>{{ b.clientName }}</strong> ({{ b.email }}) - {{ b.total }} €
+        <br />
+        Servicios: {{ b.services.join(", ") }}
+      </div>
+    </li>
+  </ul>
+  <ng-template #empty>
+    <p>No hay presupuestos todavía.</p>
+  </ng-template>
+</div>
 
