style: add news styles

--- a/src/app/shared/ui/card/card.component.html
+++ b/src/app/shared/ui/card/card.component.html
@@ -1,4 +1,4 @@
-<div class="card d-flex">
+<div class="card d-flex" [class.card--selected]="selected">
   <div class="d-flex align-items-center container">
     <div class="col-6 container-text">
       <h3>{{ title }}</h3>
