wip: adding numPages and numLanguages

--- a/src/app/features/budgets-list/budgets-list.component.html
+++ b/src/app/features/budgets-list/budgets-list.component.html
@@ -12,6 +12,7 @@
         <div class="section-two">
           <div>Servicios contratados: </div>
           <div>{{ b.services.join(", ") }}</div>
+          <div>{{ b.numPages }}</div>
         </div>
 
         <div class="section-three justify-content-end">
