--- a/src/app/shared/ui/panel/panel.component.html
+++ b/src/app/shared/ui/panel/panel.component.html
@@ -1,20 +1,13 @@
 <div class="container mt-2 d-flex justify-content-end">
-  <div class="d-flex">
-    <app-button [textButton]="'i'" (click)="openInfo()"></app-button
-    ><label>{{ textPanel }}</label>
-  </div>
-  <div class="d-flex">
-    <app-button [textButton]="'-'" (click)="decrease()"></app-button
-    ><span>
-      <div class="text-center">{{ numberPanel }}</div> </span
-    ><app-button [textButton]="'+'" (click)="increase()"></app-button>
-  </div>
+    <div class="d-flex">
+        <app-button [textButton]="'i'" (click)="openInfo()"></app-button><label>{{ textPanel }}</label>
+    </div>
+    <div class="d-flex">
+        <app-button [textButton]="'-'" (click)="decrease()"></app-button><span>
+            <div class="text-center">{{ numberPanel }}</div>
+        </span><app-button [textButton]="'+'" (click)="increase()"></app-button>
+    </div>
 </div>
 
-<app-modal
-    *ngIf="showInfo"
-    [title]="textPanel"
-    [body]="bodyText"
-    [priceModal]="unitPrice"
-    (close)="closeInfo()"
-></app-modal>
+<app-modal *ngIf="showInfo" [title]="textPanel" [body]="bodyText" [priceModal]="unitPrice"
+    (close)="closeInfo()"></app-modal>
