--- a/src/app/shared/ui/card/card.component.html
+++ b/src/app/shared/ui/card/card.component.html
@@ -19,7 +19,7 @@
     </div>
   </div>
   <div class="panel mt-2" *ngIf="selected && title === 'Web'">
-    <app-panel [textPanel]="'Número de páginas'" [unitPrice]="30" (totalPanelPrice)="onPanelPrice1($event)"></app-panel>
-    <app-panel [textPanel]="'Número de idiomas'" [unitPrice]="30" (totalPanelPrice)="onPanelPrice2($event)"></app-panel>
+    <app-panel [textPanel]="'Número de páginas'" [unitPrice]="30" [type]="'pages'" (totalPanelPrice)="onPanelPrice1($event)"></app-panel>
+    <app-panel [textPanel]="'Número de idiomas'" [unitPrice]="30" [type]="'languages'" (totalPanelPrice)="onPanelPrice2($event)"></app-panel>
   </div>
 </div>
