refactor: main-form

--- a/src/app/features/budgets-list/budgets-list.component.html
+++ b/src/app/features/budgets-list/budgets-list.component.html
@@ -4,7 +4,7 @@
     <li *ngFor="let b of budgets()">
       <div class="sub-card d-flex justify-content-between p-4">
         <div>
-          <div><strong>{{ b.clientName }}</strong></div>
+          <div><strong>{{ b.name }}</strong></div>
           <div>{{ b.email }}</div>
           <div>{{b.phone}}</div>
         </div>
