feat: add button to sort

--- a/src/app/features/budgets-list/budgets-list.component.html
+++ b/src/app/features/budgets-list/budgets-list.component.html
@@ -1,24 +1,46 @@
 <div class="card-container">
   <div class="card d-flex">
     <h3>Presupuestos en cursos</h3>
+
+    <div class="sort-buttons d-flex gap-2 mb-3">
+      <button (click)="setSort('date')" class="btn btn-outline-primary btn-sm">
+        Fecha
+      </button>
+      <button (click)="setSort('price')" class="btn btn-outline-primary btn-sm">
+        Precio
+      </button>
+      <button (click)="setSort('name')" class="btn btn-outline-primary btn-sm">
+        Nombre
+      </button>
+    </div>
+
     <ul class="p-0" *ngIf="budgets().length; else empty">
-      <li *ngFor="let b of budgets()">
+      <li *ngFor="let b of sortedBudgets()">
         <div class="sub-card d-flex justify-content-between p-4">
           <div>
-            <div><strong>{{ b.name }}</strong></div>
+            <div>
+              <strong>{{ b.name }}</strong>
+            </div>
             <div>{{ b.email }}</div>
-            <div>{{b.phone}}</div>
+            <div>{{ b.phone }}</div>
           </div>
-  
+
           <div class="section-two">
-            <div>Servicios contratados: </div>
+            <div>Servicios contratados:</div>
             <div>{{ b.services.join(", ") }}</div>
-            <div *ngIf="b.services.includes('Web')">({{ b.pages }} páginas - {{ b.languages }} idiomas)</div>
+            <div *ngIf="b.services.includes('Web')">
+              ({{ b.pages }} páginas - {{ b.languages }} idiomas)
+            </div>
           </div>
-  
+
           <div class="section-three justify-content-end">
             <div>Total:</div>
-              <div><span class="fs-4"><b>{{ b.total }}</b></span> €</div>
+            <div>
+              <span class="fs-4"
+                ><b>{{ b.total }}</b></span
+              >
+              €
+            </div>
           </div>
         </div>
       </li>
@@ -28,4 +50,3 @@
     </ng-template>
   </div>
 </div>
-
