wip: assign routes to the details screen

--- a/src/app/features/budgets-list/budgets-list.component.html
+++ b/src/app/features/budgets-list/budgets-list.component.html
@@ -15,34 +15,34 @@
     </div>
 
     <ul class="p-0" *ngIf="budgets().length; else empty">
-      <li *ngFor="let b of sortedBudgets()">
-        <div class="sub-card d-flex justify-content-between p-4">
-          <div>
+      <li *ngFor="let b of sortedBudgets(); let i = index">
+        <a [routerLink]="['/presupuesto', i]">
+          <div class="sub-card d-flex justify-content-between p-4">
             <div>
-              <strong>{{ b.name }}</strong>
+              <div>
+                <strong>{{ b.name }}</strong>
+              </div>
+              <div>{{ b.email }}</div>
+              <div>{{ b.phone }}</div>
             </div>
-            <div>{{ b.email }}</div>
-            <div>{{ b.phone }}</div>
-          </div>
-
-          <div class="section-two">
-            <div>Servicios contratados:</div>
-            <div>{{ b.services.join(", ") }}</div>
-            <div *ngIf="b.services.includes('Web')">
-              ({{ b.pages }} páginas - {{ b.languages }} idiomas)
+            <div class="section-two">
+              <div>Servicios contratados:</div>
+              <div>{{ b.services.join(", ") }}</div>
+              <div *ngIf="b.services.includes('Web')">
+                ({{ b.pages }} páginas - {{ b.languages }} idiomas)
+              </div>
+            </div>
+            <div class="section-three justify-content-end">
+              <div>Total:</div>
+              <div>
+                <span class="fs-4"
+                  ><b>{{ b.total }}</b></span
+                >
+                €
+              </div>
             </div>
           </div>
-
-          <div class="section-three justify-content-end">
-            <div>Total:</div>
-            <div>
-              <span class="fs-4"
-                ><b>{{ b.total }}</b></span
-              >
-              €
-            </div>
-          </div>
-        </div>
+        </a>
       </li>
     </ul>
     <ng-template #empty>
