--- a/src/app/features/budgets-list/budgets-list.component.scss
+++ b/src/app/features/budgets-list/budgets-list.component.scss
@@ -40,8 +40,13 @@ h3 {
 
     p {
         margin-bottom: 0px;
+        list-style: none;
     }
 
+}
+
+a {
+    text-decoration: none;
 }
 
 @media (max-width: 768px) {
