fix & style: add responsive styles and fix the errors

--- a/src/app/features/budgets-list/budgets-list.component.html
+++ b/src/app/features/budgets-list/budgets-list.component.html
@@ -25,7 +25,7 @@
               <div>{{ b.email }}</div>
               <div>{{ b.phone }}</div>
             </div>
-            <div class="section-two">
+            <div class="section-two ps-1">
               <div>Servicios contratados:</div>
               <div>{{ b.services.join(", ") }}</div>
               <div *ngIf="b.services.includes('Web')">
