--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,4 @@
-<app-header></app-header>
-<app-main-form></app-main-form>
-<app-budgets-list></app-budgets-list>
+<app-logo></app-logo>
 <router-outlet></router-outlet>
 
 
