--- a/src/app/features/client-form/client-form.component.scss
+++ b/src/app/features/client-form/client-form.component.scss
@@ -29,6 +29,9 @@ h3 {
 
 @media (max-width: 768px) {
     .card {
+        flex-wrap: wrap;
         width: 100%;
+        justify-content: center;
+        text-align: center;
     }
 }
