--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,6 @@
-$main-color: #374c96;
+@import url("https://fonts.googleapis.com/css2?family=Audiowide&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Audiowide&family=Rubik+Iso&display=swap");
+
+h3, h2 {
+    font-family: Audiowide;
+}
